fix: Pact tests are fixed. Code is cleansed.